// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`options altered options 1`] = `
Object {
  "allEntries": true,
  "autoConfigure": false,
  "hmr": false,
  "host": Object {
    "client": "localhost",
    "server": "localhost",
  },
  "https": true,
  "log": LogLevel {
    "currentLevel": 0,
    "debug": [Function],
    "error": [Function],
    "info": [Function],
    "log": [Function],
    "methodFactory": PrefixFactory {
      "options": Object {
        "level": [Function],
        "name": [Function],
        "template": "[{{time}}] {{level}} [90m｢{{name}}｣[39m: ",
        "time": [Function],
      },
      Symbol(a log instance): [Circular],
      Symbol(valid log levels): Object {
        "DEBUG": 1,
        "ERROR": 4,
        "INFO": 2,
        "SILENT": 5,
        "TRACE": 0,
        "WARN": 3,
      },
    },
    "name": "hot",
    "options": Object {
      "factory": null,
      "level": "trace",
      "name": "hot",
      "prefix": Object {
        "level": [Function],
        "template": "[{{time}}] {{level}} [90m｢{{name}}｣[39m: ",
      },
      "timestamp": true,
      "unique": true,
    },
    "trace": [Function],
    "type": "LogLevel",
    "warn": [Function],
  },
  "logLevel": "trace",
  "logTime": true,
  "port": 0,
  "reload": false,
  "send": Object {
    "errors": false,
    "warnings": false,
  },
  "server": null,
  "stats": Object {
    "context": "/",
  },
  "test": true,
  "validTargets": Array [
    "web",
    "batman",
  ],
  "webSocket": Object {
    "host": "localhost",
    "port": 0,
  },
}
`;

exports[`options defaults 1`] = `
Object {
  "allEntries": false,
  "autoConfigure": true,
  "hmr": true,
  "host": Object {
    "client": "localhost",
    "server": "localhost",
  },
  "https": undefined,
  "log": LogLevel {
    "currentLevel": 2,
    "debug": [Function],
    "error": [Function],
    "info": [Function],
    "log": [Function],
    "methodFactory": PrefixFactory {
      "options": Object {
        "level": [Function],
        "name": [Function],
        "template": "{{level}} [90m｢{{name}}｣[39m: ",
        "time": [Function],
      },
      Symbol(a log instance): [Circular],
      Symbol(valid log levels): Object {
        "DEBUG": 1,
        "ERROR": 4,
        "INFO": 2,
        "SILENT": 5,
        "TRACE": 0,
        "WARN": 3,
      },
    },
    "name": "hot",
    "options": Object {
      "factory": null,
      "level": "info",
      "name": "hot",
      "prefix": Object {
        "level": [Function],
        "template": "{{level}} [90m｢{{name}}｣[39m: ",
      },
      "timestamp": false,
      "unique": true,
    },
    "trace": [Function],
    "type": "LogLevel",
    "warn": [Function],
  },
  "logLevel": "info",
  "logTime": false,
  "port": 0,
  "reload": true,
  "send": Object {
    "errors": true,
    "warnings": true,
  },
  "server": null,
  "stats": Object {
    "context": StringMatching /\\(webpack-hot-client\\|project\\)\\$/,
  },
  "test": false,
  "validTargets": Array [
    "web",
  ],
  "webSocket": Object {
    "host": "localhost",
    "port": 0,
  },
}
`;

exports[`options https.Server 1`] = `
Object {
  "allEntries": false,
  "autoConfigure": true,
  "hmr": true,
  "host": Object {
    "client": "localhost",
    "server": "localhost",
  },
  "https": true,
  "log": LogLevel {
    "currentLevel": 2,
    "debug": [Function],
    "error": [Function],
    "info": [Function],
    "log": [Function],
    "methodFactory": PrefixFactory {
      "options": Object {
        "level": [Function],
        "name": [Function],
        "template": "{{level}} [90m｢{{name}}｣[39m: ",
        "time": [Function],
      },
      Symbol(a log instance): [Circular],
      Symbol(valid log levels): Object {
        "DEBUG": 1,
        "ERROR": 4,
        "INFO": 2,
        "SILENT": 5,
        "TRACE": 0,
        "WARN": 3,
      },
    },
    "name": "hot",
    "options": Object {
      "factory": null,
      "level": "info",
      "name": "hot",
      "prefix": Object {
        "level": [Function],
        "template": "[{{time}}] {{level}} [90m｢{{name}}｣[39m: ",
      },
      "timestamp": false,
      "unique": true,
    },
    "trace": [Function],
    "type": "LogLevel",
    "warn": [Function],
  },
  "logLevel": "info",
  "logTime": false,
  "port": 0,
  "reload": true,
  "send": Object {
    "errors": true,
    "warnings": true,
  },
  "server": Any<Server>,
  "stats": Object {
    "context": "/Users/powella/code/webpack-hot-client",
  },
  "test": false,
  "validTargets": Array [
    "web",
  ],
  "webSocket": Object {
    "host": "::",
    "port": Any<Number>,
  },
}
`;

exports[`options https: false, https.Server 1`] = `
Object {
  "allEntries": false,
  "autoConfigure": true,
  "hmr": true,
  "host": Object {
    "client": "localhost",
    "server": "localhost",
  },
  "https": false,
  "log": LogLevel {
    "currentLevel": 2,
    "debug": [Function],
    "error": [Function],
    "info": [Function],
    "log": [Function],
    "methodFactory": PrefixFactory {
      "options": Object {
        "level": [Function],
        "name": [Function],
        "template": "{{level}} [90m｢{{name}}｣[39m: ",
        "time": [Function],
      },
      Symbol(a log instance): [Circular],
      Symbol(valid log levels): Object {
        "DEBUG": 1,
        "ERROR": 4,
        "INFO": 2,
        "SILENT": 5,
        "TRACE": 0,
        "WARN": 3,
      },
    },
    "name": "hot",
    "options": Object {
      "factory": null,
      "level": "info",
      "name": "hot",
      "prefix": Object {
        "level": [Function],
        "template": "[{{time}}] {{level}} [90m｢{{name}}｣[39m: ",
      },
      "timestamp": false,
      "unique": true,
    },
    "trace": [Function],
    "type": "LogLevel",
    "warn": [Function],
  },
  "logLevel": "info",
  "logTime": false,
  "port": 0,
  "reload": true,
  "send": Object {
    "errors": true,
    "warnings": true,
  },
  "server": Any<Server>,
  "stats": Object {
    "context": "/Users/powella/code/webpack-hot-client",
  },
  "test": false,
  "validTargets": Array [
    "web",
  ],
  "webSocket": Object {
    "host": "::",
    "port": Any<Number>,
  },
}
`;
